# graphics-programming-2021

assignments/poly/: CMakeLists.txt  config.h  lowpoly-terrain.pptx  main.cpp  primitives.h
assignments/poly/engine/: entity_renderer.h  gui_renderer.h  master_renderer.h  model.h  model_loader.h  renderer.h  terrain_renderer.h  water_renderer.h  window_manager.h
assignments/poly/entities/: camera.h  entity.h  light.h
assignments/poly/generation/: FastNoiseLite.h  colour_generator.h  height_map.h  mesh_generator.h  perlin_noise.h
assignments/poly/shaders/: shader.frag  shader.vert  shader_program.h  static_shader.h  terrain.frag  terrain.vert  terrain_shader.h  water_shader.h
assignments/poly/shaders/flat/: flat_terrain_shader.h  terrain.frag  terrain.vert
assignments/poly/shaders/geometry/: geomoetry_terrain_shader.h  terrain.glsl  terrain.vert
assignments/poly/shaders/gui/: gui.frag  gui.vert  gui_shader.h
assignments/poly/shaders/normal/: normal_terrain_shader.h  terrain.frag  terrain.vert
assignments/poly/shaders/terrain/flat/: flat_terrain_shader.h  terrain.vert
assignments/poly/shaders/terrain/geometry/: geomoetry_terrain_shader.h  terrain.frag  terrain.glsl
assignments/poly/shaders/terrain/normal/: normal_terrain_shader.h  terrain.vert
assignments/poly/shaders/terrain/vertexcopy/: copy_terrain_shader.h  terrain.frag  terrain.vert
assignments/poly/shaders/vertexcopy/: copy_terrain_shader.h  terrain.frag  terrain.vert
assignments/poly/shaders/water/: water.frag  water.vert  water_fbos.h  water_shader.h
assignments/poly/shaders/water/lowpoly/: lowpoly_water_shader.h  water.frag  water.vert
assignments/poly/shaders/water/normal/: normal_water_shader.h  water.frag  water.vert
assignments/poly/terrains/: heights_generator.h  terrain.h
assignments/poly/util/: OBJ_loader.h  gui.h  obj_reader.h  primitives.h
assignments/poly/util/guis/: gui_texture.h  im_gui.h
assignments/voronoi/: main.cpp
assignments/voronoi/shaders/: color.frag  distance.frag  distance_color.frag  shader.vert
assignments/weather_effects/: CMakeLists.txt  PerlinNoise.cpp  PerlinNoise.h  README.txt  main.cpp  primitives.h
assignments/weather_effects/shaders/: particle_shader.frag  particle_shader.vert  rain.frag  rain.vert  shader.frag  shader.vert  snow.frag  snow.vert
(+21 files in other folders)
